--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "vite & json-server -w server/server.json",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build & json-server -w server/server.json",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
