--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "express": "^4.18.3",
     "generator-react-ts-component-dir": "^1.0.0",
     "npm": "^10.5.0",
     "react": "^18.2.0",
